--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-	<title>Main Page</title>
+	<title>SpiderShiba Inu</title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="description" content="some content">
@@ -766,7 +766,7 @@
 		</footer>
 	</div>
 
-	<script src="js/app.min.js?_v=20230209162726"></script>
+	<script defer src="js/app.min.js?_v=20230209162726"></script>
 </body>
 
 </html>
