--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 <body>
-	<div class="wrapper wow animate__fadeIn">
+	<div class="wrapper">
 		<!--
  		<div class="preload">
 			<div class="preload__wrapper">
