--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
 
-				<div class="header__content animate__animated animate__backInDown">
+				<div class="header__content">
 					<div class="header__info">
 						<h1 class="header__title">
 							<div><span>Who is</span> mr.</div> Spidershiba Inu?
